Cleanup TODO notes, remove old preview args from build.gradle