@@ -29,26 +29,18 @@ java {
     }
 }
 
-tasks.withType(JavaCompile).configureEach {
-    //options.compilerArgs.add('--enable-preview')
-}
-
 tasks.withType(Test).configureEach {
-    //jvmArgs += '--enable-preview'
     jvmArgs += '--enable-native-access=ALL-UNNAMED'
 }
 
 compileTestGroovy {
-    //options.compilerArgs.add('--enable-preview')
     options.compilerArgs.add('--enable-native-access=ALL-UNNAMED')
 }
 
 test {
     useJUnitPlatform()
-    // TODO - support non-Linux lib names
     systemProperty "buoy.test.lib.path", new File(parent.projectDir.absoluteFile, "native/build/lib/main/debug/").toPath().toString()
     jvmArgs(['--enable-native-access=ALL-UNNAMED'])
-    //jvmArgs(['--enable-preview', '--enable-native-access=ALL-UNNAMED'])
 }
 
 publishing {
